1961 [AVS Cutter] update start/end frame when a section is clicked. Feature request #1660341
1960 [Main Window] initial starting window opens in the visible area taking the taskbar into account. Feature request #2821392
     [VideoPlayer] taking taskbar into account, too
1959 [Main Window] disabled maximize button. Feature request #2727670
1958 [Audio Encoder] encoding job can be added regardless of the input file status
1957 [Update] added update check for the Nero AAC encoder part II
1956 [Update] added update check for the Nero AAC encoder
1955 [One-Click] added status of the source detection to the progress window
1954 [Audio Encoder] fixed audio detection crash
1953 [Job] enhanced message in case a job is already aborted
1952 [FFMSIndexer] enhanced progress window in case that the index file already exists
1951 [MKV Muxer] fixed problem with chapter information in audio files
1950 [One-Click] a new job will be added after the indexing job to show the progress of the preprocessing
1949 [Audio Encoder] if AAC is detected FFAudioSource() will be used
     [Audio Encoder] downmix will be ignored if there are not more than 2 audio channels
1948 changed ISO 639-2 language codes for Croatian, Romanian and Serbian
1947 [File Indexer] fixed selecting of settings after initial opening. Bug #3182423
1946 [Audio Jobs] update elapsed time while preprocessing
1945 [VideoPlayer] while resizing/opening the window is moved to the visible area of the desktop
1944 [One-Click] audio language names added to the output file
1943 [AVS Script Creator] VideoPlayer preview starts in 1:1 mode
     [AVS Script Creator] while cropping VideoPlayer preview moves to the cropping border
     [VideoPlayer] fixed a sizing problem when window was minimized
     [VideoPlayer] fixed appearing unnecessary scrollbars in 1:1 mode
     [VideoPlayer] start window in top of other windows (excluding calling window)